# nvim-hs

./: .travis.yml  stack.yaml
test-plugins/: ChangeLog.md  Fibonacci.hs  init.vim  nvim-hs-test-plugins.cabal  nvim.hs
test-plugins/Fibonacci/: Plugin.hs
